--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/Anihabe/node_test/issues"
   },
-  "homepage": "https://github.com/Anihabe/node_test#readme"
+  "homepage": "https://github.com/Anihabe/node_test#readme",
+  "dependencies": {
+    "express": "^4.18.1",
+    "pg": "^8.8.0"
+  }
 }
